--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,24 @@
-body {
+h1,
+h2,
+h3,
+h4,
+h5,
+p {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  color: #555;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  margin: 0;
+  font-family: 'Montserrat', sans-serif;
+}
+
+html,
+body,
+#root {
+  min-height: 100%;
+}
+
+button {
+  cursor: pointer;
 }
