--- a/src/index.css
+++ b/src/index.css
@@ -1,22 +1,53 @@
-h1,
-h2,
-h3,
-h4,
-h5,
-p {
-  margin: 0;
-  color: #555;
+* {
+  box-sizing: border-box;
 }
 
 body {
   margin: 0;
   font-family: 'Montserrat', sans-serif;
+  color: #333;
+  padding-top: 4rem;
 }
 
 html,
 body,
 #root {
   min-height: 100%;
+}
+
+h1,
+h2,
+h3,
+p {
+  margin: 0;
+}
+
+ul,
+li {
+  list-style: none;
+  padding: 0px;
+  margin: 0px;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+}
+
+button,
+input {
+  display: block;
+  font-size: 1rem;
+}
+
+a {
+  text-decoration: none;
+}
+
+.container {
+  max-width: 50rem;
+  padding: 0 1rem;
+  margin: 0 auto;
 }
 
 button {
