title stylization and login animation

--- a/src/index.css
+++ b/src/index.css
@@ -4,9 +4,10 @@
 
 body {
   margin: 0;
-  font-family: 'Montserrat', sans-serif;
   color: #333;
   padding-top: 4rem;
+  --font-first: Helvetica, Arial, sans-serif;
+  --font-second: 'Montserrat', geogia;
 }
 
 html,
@@ -42,6 +43,7 @@ input {
 
 a {
   text-decoration: none;
+  color: #333;
 }
 
 .container {
@@ -52,4 +54,38 @@ a {
 
 button {
   cursor: pointer;
+}
+
+.title {
+  font-family: var(--font-second);
+  font-size: 3rem;
+  margin: 1rem 0;
+  position: relative;
+  z-index: 1;
+}
+
+.title::after {
+  content: '';
+  display: block;
+  width: 1.5rem;
+  height: 1.5rem;
+  background: #fb1;
+  position: absolute;
+  bottom: 5px;
+  left: -5px;
+  border-radius: 0.2rem;
+  z-index: -1;
+}
+
+.anime-left {
+  opacity: 0;
+  transform: translateX(-20px);
+  animation: anime-left 0.3s forwards;
+}
+
+@keyframes anime-left {
+  to {
+    opacity: 1;
+    transform: initial;
+  }
 }
