--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -4,7 +4,7 @@
 
 body {
   margin: 0;
-  color: #333;
+  color: var(--blackLight);
   padding-top: 4rem;
   --font-first: Helvetica, Arial, sans-serif;
   --font-second: 'Montserrat', geogia;
@@ -43,7 +43,7 @@ input {
 
 a {
   text-decoration: none;
-  color: #333;
+  color: var(--blackLight);
 }
 
 .container {
@@ -69,7 +69,7 @@ button {
   display: block;
   width: 1.5rem;
   height: 1.5rem;
-  background: #fb1;
+  background: var(--primary);
   position: absolute;
   bottom: 5px;
   left: -5px;
