--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -7,7 +7,8 @@ body {
   color: var(--blackLight);
   padding-top: 4rem;
   --font-first: Helvetica, Arial, sans-serif;
-  --font-second: 'Montserrat', geogia;
+  --font-second: 'Montserrat', sans-serif, geogia;
+  font-family: var(--font-second);
 }
 
 html,
