--- a/src/components/user/userNav/styles.css
+++ b/src/components/user/userNav/styles.css
@@ -1,7 +1,7 @@
 .nav {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  gap: 1rem
+  gap: 1rem;
 }
 
 .nav a,
@@ -22,17 +22,100 @@
 .nav button:hover,
 .nav button:focus {
   background-color: var(--white);
-  box-shadow: 0 0 0 3px var(--greyLight);
+  box-shadow: 0 0 0 .188rem var(--greyLight);
   border-color: var(--blackLight);
   outline: none;
 }
 
 .nav a.nav__active  {
   background-color: var(--white);
-  box-shadow: 0 0 0 3px var(--second);
+  box-shadow: 0 0 0 .188rem var(--second);
   border-color: var(--primary)
 }
 
 .nav .nav__active svg {
   color: var(--primary);
+}
+
+.nav__button {
+  background-color: var(--greyLight);
+  border: 1px solid transparent;
+  border-radius: .2rem;
+  transition: .2s;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.nav__button::after {
+  content: '';
+  display: block;
+  width: 1.2rem;
+  height: .188rem;
+  background-color: currentColor;
+  border-radius: 2px;
+  box-shadow: 0 .375rem currentColor, 0 -.375rem currentColor;
+  transition: .2s;
+}
+
+.nav__button:focus,
+.nav__button:hover,
+.nav__button--active {
+  outline: none;
+  background-color: var(--white);
+  box-shadow: 0 0 0 .188rem var(--second);
+  border-color: var(--primary);
+  color: var(--primary);
+}
+
+.nav__button--active::after {
+  transform: rotate(90deg);
+  width: .25rem;
+  height: .25rem;
+  box-shadow: 0 .5rem currentColor, 0 -.5rem currentColor;
+}
+
+.nav__mobile {
+  display: block;
+  position: absolute;
+  top: 4.375rem;
+  right: 0;
+  opacity: 0;
+  padding: 0 1rem;
+  background-color: var(--white);
+  border-radius: .2rem;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+  transform: translateX(-20px);
+  font-size: 15px;
+  pointer-events: none;
+}
+
+.nav__mobile a,
+.nav__mobile button {
+  display: flex;
+  align-items: center;
+  background-color: transparent;
+  width: 100%;
+  border: none;
+  padding: .5rem 0;
+  cursor: pointer;
+}
+
+.nav__mobile--active {  
+  transition: .3s;
+  transform: initial;
+  opacity: 1;
+  z-index: 100;
+  pointer-events: initial;
+}
+
+.nav__mobile svg {
+  margin-right: .5rem;
+}
+
+.nav__mobile a:hover svg,
+.nav__mobile button:hover svg {
+  color: var(--primary)
 }
